Changes for 1.8.4rc3

 - [ZBX-3123] fixed Oracle SQL errors in processing of IT services (Sasha)
 - [ZBXNEXT-205,ZBXNEXT-355] added support of user macros in community, OID, security name and passphrases fields of SNMP items (Sasha,Aly)
 - [ZBXNEXT-357] added support of user macros in parameters field of database item; thanks to Kirill Fateev (Sasha) 
 - [ZBX-3179] fixed memory leaks and 100% CPU usage for proxy with SQLite3 (asaveljevs)
 - [ZBXNEXT-538] include ibm_db2.sql and images_ibm_db2.sql files in distribution package (Sasha)
 - [ZBX-3107] fixed graph bugs: problem with large values, problem with uptime format (KB)
 - [ZBX-2349] unicode support for macros and web scenario steps (KB)
 - [ZBX-3137] fixed errors related to deleting an application that is used in a web scenario (KB)

Changes for 1.8.4rc2

 - [ZBXNEXT-538] added support for IBM DB2 (Aly,asaveljevs,Sasha)
 - [ZBX-1362] optimized alert performance (KB)
 - [ZBX-2852] fixed map not updating in slideshow (Vedmak)
 - [ZBX-1346] update example agent daemon configuration file for Windows with parameters from Zabbix manual (Richlv)
 - [ZBX-2984] fixed incorrect trigger line in graphs. For line drawing was used axis from first item not trigger item (Vedmak)
 - [ZBX-3059] different titles for popup menu depending on data type (KB)
 - [ZBX-2861] fixed error when adding users to usergroups (KB)
 - [ZBX-1492] added confirmation dialog when deleting macros (KB)
 - [ZBX-3135] add an example for using standard input in zabbix_sender manpage (Richlv)
 - [ZBX-2616] bundled DejaVu font upgraded from 2.31 to 2.32 (Richlv)
 - [ZBX-2630] fixed ability to translate various strings in the frontend depending on their context (Richlv)
 - [ZBX-3091] fixed error when update proxy (Vedmak)
 - [ZBX-3120] fixed error when create new map (Vedmak)
 - [ZBX-3042] fixed submitParent field error (KB)
 - [ZBX-1038] fixed last(), prev(), diff(), change(), and abschange() not working properly with long textual values (asaveljevs)