@@ -1,5 +1,6 @@
 Changes for 1.8.4rc3
 
+ - [ZBX-3195] fixed slow sync of trends data while server shutdown (Sasha)
  - [ZBX-3123] fixed Oracle SQL errors in processing of IT services (Sasha)
  - [ZBXNEXT-205,ZBXNEXT-355] added support of user macros in community, OID, security name and passphrases fields of SNMP items (Sasha,Aly)
  - [ZBXNEXT-357] added support of user macros in parameters field of database item; thanks to Kirill Fateev (Sasha) 
